--- a/gui/src/App.css
+++ b/gui/src/App.css
@@ -14,6 +14,14 @@
   height: 10px !important;
 }
 
+/* Search Box */
+.form-control:focus {
+  border-radius: 4px;
+  border: 1px solid #2684FF !important;
+  box-shadow: 0 0 0 1px #2684FF !important;
+  outline: 0 !important;
+}
+
 /* Filter */
 /* .filter-selected {
   cursor: pointer;
