[GUI] Improve responsive support

--- a/gui/src/App.css
+++ b/gui/src/App.css
@@ -2,6 +2,9 @@
   .responsive-hide {
     display: none !important;
   }
+  .responsive-search-bar {
+    width: 40vw !important;
+  }
 }
 
 /* Loading */
