--- a/gui/src/App.css
+++ b/gui/src/App.css
@@ -49,6 +49,13 @@
 .card:hover {
   box-shadow: 0 .125rem .5rem rgba(0,0,0,.15)!important;
 }
+.card-header-text {
+  display: inline-block;
+  vertical-align: middle;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 /* Preview */
 .float-btn {
