--- a/frontend/src/regions/components/path-link.css
+++ b/frontend/src/regions/components/path-link.css
@@ -1,5 +1,11 @@
 .path-link {
     margin-right: 10px;
     font-size: 12px;
-    color: gray;
+    color: black;
+}
+
+.pathLabel-non-final:hover{
+    color: blue;
+    text-decoration: underline;
+    cursor: pointer;
 }
