--- a/frontend/src/regions/components/regions.css
+++ b/frontend/src/regions/components/regions.css
@@ -1,23 +1,27 @@
-.checkbox{
-    margin-top:6px
-}
 .modal-dialog {
     width: auto;
-    overflow: 'auto'; 
-    height: '100%';
-}
-.selection-body{
-    height: 750px;
-    overflow-y: auto;
-    width: auto;
-}
-.button {
-    margin: 5px;;
-}
-.checkboxes {
-    display: 'inline-flex';
+    height: calc(100% - 1.75rem)!important;
+    max-width: 80%!important;
 }
 
-.query{
+.selection-body {
+    height: 400px;
+    overflow-y: auto;
+    width: auto;
+    margin-left: -10px!important;
+}
+
+.query {
     border-bottom: black 1px;
+}
+
+.displayResult .col-4 {
+    padding-left: 15px;
+    padding-right: 0px;
+}
+
+.form-inline button,
+.region-filter,
+.region-filter input {
+    margin: 8px;
 }
