--- a/frontend/src/regions/components/forest-display.css
+++ b/frontend/src/regions/components/forest-display.css
@@ -50,3 +50,11 @@
     top: 1em;
     bottom: 0;
 }
+
+.region-tree {
+    margin-top: 95px;
+    height: 400px;
+    overflow-y: auto;
+    width: auto;
+    margin-left: -10px!important;
+}
