--- a/frontend/src/regions/components/regions.css
+++ b/frontend/src/regions/components/regions.css
@@ -25,3 +25,16 @@
 .region-filter input {
     margin: 8px;
 }
+
+.region-all {
+    display: flex;
+}
+
+.region-list {
+    text-align: left;
+    /* text-align: center; */
+}
+
+.region-checkbox {
+    margin-right: 8px;
+}
